<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ll_air_quality_layout"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/text_air_quality"
            android:textColor="@color/black"
            android:textSize="16sp"/>

        <TextView
            style="@style/vertical_line" />

        <TextView
            android:id="@+id/tv_air_quality"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/test_text"
            android:textColor="@color/translucent"
            android:textSize="16sp"/>

        <TextView
            android:id="@+id/tv_release_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/test_text"
            android:gravity="end"
            android:textColor="@color/translucent"
            android:textSize="14sp"/>

    </LinearLayout>

    <View
        style="@style/horizontal_line" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp">

        <!--*************** AQI 指数 ***************-->
        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_centerInParent="true">

                <TextView
                    android:id="@+id/tv_aqi"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textColor="@color/black"
                    android:padding="5dp"
                    android:textSize="40sp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/text_aqi"
                    android:textColor="@color/black"/>

            </LinearLayout>

        </RelativeLayout>

        <!--*************** PM2.5 指数 **************-->
        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_centerInParent="true">

                <TextView
                    android:id="@+id/tv_pm25"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textColor="@color/black"
                    android:padding="5dp"
                    android:textSize="40sp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/text_pm25"
                    android:textColor="@color/black"/>

            </LinearLayout>

        </RelativeLayout>

    </LinearLayout>

    <View
        style="@style/horizontal_line" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/text_air_quality_detail"
        android:padding="10dp"
        android:textColor="@color/translucent"/>

    <View
        style="@style/Interval_horizontal_line" />

</LinearLayout>
