<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <!--****************** 搜索城市 *****************-->
    <LinearLayout
        android:layout_marginTop="25dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/iv_back"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_gravity="center"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:padding="5dp"
            android:src="@mipmap/bg_back_black"/>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="28dp"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:orientation="horizontal"
            android:layout_marginRight="10dp"
            android:background="@drawable/bg_edit_text_search">
            <ImageView
                android:layout_width="22dp"
                android:layout_height="22dp"
                android:layout_gravity="center"
                android:padding="3dp"
                android:src="@mipmap/bg_home_search"/>
            <EditText
                android:id="@+id/et_search"
                android:layout_width="0dp"
                android:layout_height="25dp"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:hint="@string/et_search_city"
                android:textColorHint="@color/gray"
                android:layout_marginLeft="5dp"
                android:singleLine="true"
                android:background="@null"
                android:textSize="12sp" />

            <ImageView
                android:id="@+id/iv_clear_content"
                android:layout_width="22dp"
                android:layout_height="22dp"
                android:layout_gravity="center"
                android:padding="4dp"
                android:visibility="gone"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:src="@mipmap/bg_close_gray"/>

        </LinearLayout>

    </LinearLayout>

    <ListView
        android:id="@+id/lv_search_word"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:listSelector="@drawable/list_row_selector"
        android:divider="@color/gray_list_view"
        android:dividerHeight="0.5dp"/>

    <!--****************** 当前定位 *****************-->
    <LinearLayout
        android:id="@+id/ll_locate_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:textSize="16sp"
            android:text="@string/tv_locate_city"/>

        <LinearLayout
            android:id="@+id/layout_locate"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:minWidth="96dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:gravity="center"
            android:clickable="true"
            android:background="?android:attr/selectableItemBackground">

            <ImageView
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:padding="6dp"
                android:src="@drawable/ic_locate"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/tv_located_city"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_locating"
                android:textSize="16sp"
                android:textColor="@color/gray_deep"/>
        </LinearLayout>

        <!--****************** 选择城市 *****************-->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:textSize="16sp"
            android:text="@string/tv_select_city"/>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <fragment
                android:id="@+id/fg_choose_area"
                android:layout_marginRight="15dp"
                android:layout_marginLeft="15dp"
                android:layout_marginBottom="15dp"
                android:name="com.kxwon.bingweather.ui.fragment.ChooseAreaFragment"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:layout="@layout/fragment_choose_area" />

        </FrameLayout>

    </LinearLayout>

</LinearLayout>
